...
          ),
        })}
      >
        <Tab.Screen
          name="Home"
          component={HomeScreen}
          options={{ tabBarLabel: t('tabs.home'), tabBarButtonTestID: 'tab-home' }}
        />
        <Tab.Screen
          name="Bible"
          component={BibleScreen}
          options={{ tabBarLabel: t('tabs.bible'), tabBarButtonTestID: 'tab-bible' }}
        />
...
